Align theme name variable and folder. Fix QR issue

--- a/sphinx_pj_theme/_static/css/pj_print.css
+++ b/sphinx_pj_theme/_static/css/pj_print.css
@@ -39,7 +39,7 @@ div.cv-main-picture {
     min-width: 120px;
     padding-block: 0px;
     margin-top: 0.9em;
-    background: url("../cv_qr.png");
+    background: url("../img/cv_qr.png");
     background-color: transparent;
     min-height: 120px;
     background-position: center;
